<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home_item"/>
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_heart"
        android:title="@string/favourites_item" />
    <item
        android:id="@+id/composeMenuItem"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/ic_plus"
        android:title="@string/compose_diary"/>
    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar_item"/>
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/settings_item" />

</menu>